# SoftwareImpactHackathon2023_BiDirectional

./: .gitignore  LICENSE  README.md  gold.csv  main.py  pyproject.toml  setup.cfg
app/: arxiv.py  arxiv_latex.py  arxiv_pdfs.py  doi.py  github.py  latex_matcher.py  latex_merger.py  matcher.py  merger.py  pdf_matcher.py  utils.py  zenodo.py
data/: LaTeX-PreliminaryResults.csv
src/: arxiv.py  doi.py  enums.py  errors.py  github.py  logger.py  pub_finder.py  repos_finder.py  zenodo.py
src/latex/: latex_matcher.py  latex_merger.py
src/pdf/: pdf_extractor.py  pdf_matcher.py
tests/: test_repos_finder.py
