[metadata]
name = SoftwareImpactHackathon2023-BiDirectional
version = 0.0.1
description = BiDirectional
keywords = BiDirectional
license = MIT
author = Christoph Treude, Nicola Tarocco
author_email = ctreude@gmail.com, ntarocco@gmail.com
platforms = any
url = https://github.com/ctreude/SoftwareImpactHackathon2023_BiDirectional

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    arxiv>=1.0.0,<2.0.0
    PyGithub>=2.0.0,<3.0.0
    tika>=2.0.0,<3.0.0

[options.extras_require]
tests =
    pytest
    black
